--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "data/yolov5"]
-	path = data/yolov5
-	url = https://github.com/ultralytics/yolov5
 [submodule "yolov5"]
 	path = yolov5
 	url = https://github.com/ultralytics/yolov5.git
+[submodule "Yet-Another-EfficientDet-Pytorch"]
+	path = Yet-Another-EfficientDet-Pytorch
+	url = https://github.com/zylo117/Yet-Another-EfficientDet-Pytorch.git
